fix display problems with names that wrap

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Oswald', cursive;
-  font-size: 24px;
+  font-size: 22px;
   background-color: #FCFEFF;
   margin: 0;
   padding: 0;
@@ -48,7 +48,7 @@ p {
 li {
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
   margin: 5px;
-  border-radius: 10px;
+  border-radius: 5px;
   list-style-type: none;
   width: 120px;
   display:flex;
@@ -56,7 +56,8 @@ li {
   align-items: center;
   flex-basis: auto;
   flex-grow:1;
-  min-height: 2%;
+  min-height: 2% !important;
+  line-height: 75%;
 }
 
 li *{
